--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/hardwareStore
+MONGO_URI=mongodb://localhost:27017/hardwareStore
 JWT_SECRET=your_jwt_secret_key  
 PORT=3000 
